--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r molecule/requirements.txt
+          pip install -r requirements.txt
           
       - name: Install required Ansible collections
         run: |
